logs/dag_id=weather_dag_api/run_id=manual__2023-04-25T18:52:15.083790+00:00/task_id=create_table_postgres/attempt=1.log
[2023-04-25T18:52:23.360+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: weather_dag_api.create_table_postgres manual__2023-04-25T18:52:15.083790+00:00 [queued]>
[2023-04-25T18:52:23.388+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: weather_dag_api.create_table_postgres manual__2023-04-25T18:52:15.083790+00:00 [queued]>
[2023-04-25T18:52:23.410+0000] {taskinstance.py:1288} INFO - 
--------------------------------------------------------------------------------
[2023-04-25T18:52:23.413+0000] {taskinstance.py:1289} INFO - Starting attempt 1 of 1
[2023-04-25T18:52:23.414+0000] {taskinstance.py:1290} INFO - 
--------------------------------------------------------------------------------
[2023-04-25T18:52:23.467+0000] {taskinstance.py:1309} INFO - Executing <Task(PostgresOperator): create_table_postgres> on 2023-04-25 18:52:15.083790+00:00
[2023-04-25T18:52:23.478+0000] {standard_task_runner.py:55} INFO - Started process 399 to run task
[2023-04-25T18:52:23.499+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'weather_dag_api', 'create_table_postgres', 'manual__2023-04-25T18:52:15.083790+00:00', '--job-id', '6', '--raw', '--subdir', 'DAGS_FOLDER/weather_dag_api.py', '--cfg-path', '/tmp/tmpxc1w2e3g']
[2023-04-25T18:52:23.507+0000] {standard_task_runner.py:83} INFO - Job 6: Subtask create_table_postgres
[2023-04-25T18:52:23.896+0000] {task_command.py:389} INFO - Running <TaskInstance: weather_dag_api.create_table_postgres manual__2023-04-25T18:52:15.083790+00:00 [running]> on host 9dd0afd831d3
[2023-04-25T18:52:24.238+0000] {taskinstance.py:1518} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=weather_dag_api
AIRFLOW_CTX_TASK_ID=create_table_postgres
AIRFLOW_CTX_EXECUTION_DATE=2023-04-25T18:52:15.083790+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-04-25T18:52:15.083790+00:00
[2023-04-25T18:52:24.242+0000] {sql.py:254} INFO - Executing:  CREATE TABLE IF NOT EXISTS measurements (
			timestamp TIMESTAMP
			temp FLOAT );
[2023-04-25T18:52:24.291+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-04-25T18:52:26.026+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-04-25T18:52:26.049+0000] {sql.py:375} INFO - Running statement:  CREATE TABLE IF NOT EXISTS measurements (
			timestamp TIMESTAMP
			temp FLOAT );, parameters: None
[2023-04-25T18:52:26.080+0000] {taskinstance.py:1776} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "temp"
LINE 3:    temp FLOAT );
           ^

[2023-04-25T18:52:26.125+0000] {taskinstance.py:1332} INFO - Marking task as FAILED. dag_id=weather_dag_api, task_id=create_table_postgres, execution_date=20230425T185215, start_date=20230425T185223, end_date=20230425T185226
[2023-04-25T18:52:26.197+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 6 for task create_table_postgres (syntax error at or near "temp"
LINE 3:    temp FLOAT );
           ^
; 399)
[2023-04-25T18:52:26.284+0000] {local_task_job.py:212} INFO - Task exited with return code 1
[2023-04-25T18:52:26.358+0000] {taskinstance.py:2596} INFO - 0 downstream tasks scheduled from follow-on schedule check
